Added thumbnail to Game class and started import collection

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,7 @@
         <activity android:name=".AddToCollection">
         </activity>
         <activity android:name=".removeGameActivity"></activity>
+        <activity android:name=".ImportCollection"></activity>
     </application>
 
 </manifest>
