added filter added filter item added filterResult Activity .java added filterpage Activity .java

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,10 +19,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".AddToCollection"></activity>
+        <activity android:name=".AddToCollection" />
         <activity android:name=".removeGameActivity" />
         <activity android:name=".ImportCollection" />
-        <activity android:name=".filterpage"></activity>
+        <activity android:name=".filterpage" />
+        <activity android:name=".filterResult"></activity>
     </application>
 
 </manifest>
